--- a/module3/mongodb/pom.xml
+++ b/module3/mongodb/pom.xml
@@ -4,12 +4,16 @@
 
     <groupId>com.evernorth</groupId>
     <artifactId>mongodb</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>1.0</version>
+    <name>MongoDB :: Java Driver Examples</name>
+
 
     <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -19,13 +23,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.30</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <version>1.7.21</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -34,29 +32,71 @@
         </dependency>
     </dependencies>
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
-            <plugin>
-                <!-- Build an executable JAR -->
-                <groupId>${groupId}</groupId>
-                <artifactId>${artifactId}</artifactId>
-                <version>${version}</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.evernorth.mongodb.ListDocuments</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>list</id>
+                        <configuration>
+                            <mainClass>com.evernorth.mongodb.ListDocuments</mainClass>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>insert</id>
+                        <configuration>
+                            <mainClass>com.evernorth.mongodb.InsertDocument</mainClass>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>query</id>
+                        <configuration>
+                            <mainClass>com.evernorth.mongodb.QueryDocuments</mainClass>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>pojo</id>
+                        <configuration>
+                            <mainClass>com.evernorth.mongodb.POJODocuments</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
